--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <!-- Copyright -->
     <div class="copyright">
-        <p>© Asslone4 All Right Reserved.</p>
+        <p>© Veera All Right Reserved.</p>
     </div>
 
 
